# MOS_visualizer

./: .gitignore  README.md  config.py  config.yaml  main.py  pyproject.toml  visualizer_utils.py
camera_presets/: gray.json  instance.json  movable.json  nongrounded.json
src/mos_visualizer/: __init__.py  cli.py  coloring.py  config.py  cv_display.py  loader.py  range_view.py  viewer.py
